# in-memory-sql-db

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  memdb.toml.example  pyproject.toml
docker/: memdb.toml
docs/: ARCHITECTURE.md  class-diagram.md  flowchart-dbms.md  release-process.md  sequence-run-query.md  server-dbms-phase.md  server-echo-phase.md
scripts/: benchmark_client.py  benchmark_dbms.py
src/memdb/: __init__.py  __main__.py  cli.py  client.py  config.py  dbms.py  demo.py  protocol.py  query_input.py  rw_lock.py
src/memdb/commands/: base.py  comparison_condition.py  create_table.py  delete.py  describe.py  describe_db.py  describe_table.py  drop_table.py  index_definition.py  insert.py  query_factory.py  query_result.py  select.py  update.py
src/memdb/data/: cell.py  cell_data.py  cell_metadata.py  column.py  db_data.py  hash_index.py  row.py  table.py  table_entry.py
src/memdb/parser/: parsed_statement.py  query_parser.py
src/memdb/server/: __main__.py  config.py  tcp_server.py
src/memdb/storage/: db_storage.py  (+5 more)
tests/: test_cli.py  test_client.py  test_config.py  test_dbms.py  test_demo.py  test_hash_index.py  test_json_file_storage.py  test_main.py  test_protocol.py  test_setup_logging.py  test_storage_factory.py  test_storage_setup_logging.py
tests/commands/: test_create_table.py  test_describe.py  test_drop_table.py  test_insert.py  test_query_factory.py  test_select.py
tests/parser/: test_query_parser.py
tests/server/: test_config.py  test_main.py  test_tcp_server.py
(+1 files in other folders)
