[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memdb"
version = "0.1.0"
description = "In-memory SQL relational database"
requires-python = ">=3.11"

[project.scripts]
memdb = "memdb.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
